syntax = "proto3";

option java_multiple_files = true; // Generate separate .java files for each message and service
option java_package = "io.quarkus.example"; // Java package for generated classes
option java_outer_classname = "HelloWorldProto"; // Outer class name for generated classes

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int32 count = 2;
}
